# autodox-libraries

./: README.md
candid_gen/: Cargo.toml  README.md
candid_gen/src/: lib.rs
