[package]
name = "candid_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.109"
quote = "1.0.23"
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1"
ic-cdk-macros = "0.6.0"
ic-types = "0.2.1"

[lib]
crate-type = ["cdylib"]